AX: VoiceOver speaking too much when group elements with tabindex=-1 are used https://bugs.webkit.org/show_bug.cgi?id=122574

Reviewed by Mario Sanchez Prada.

Source/WebCore:

Tests: accessibility/negative-tabindex-does-not-expose-label.html

Elements that expose tabindex=-1 are being identified as generic focusable elements for accessibility.
Which among other things, determines whether to create an accessible name for the object.
This has the negative effect of causing VoiceOver to speak way too much information when navigating inside
a <div> with this attribute.

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::visibleText):
(WebCore::AccessibilityNodeObject::title):

LayoutTests:

* accessibility/negative-tabindex-does-not-expose-label-expected.txt: Added.
* accessibility/negative-tabindex-does-not-expose-label.html: Added.



Canonical link: https://commits.webkit.org/140700@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157231 268f45cc-cd09-0410-ab3c-d52691b4dbfc